[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/editors/ActorEditor.gd" type="Script" id=1]
[ext_resource path="res://scripts/AnimatedAtlas.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/vcr.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/images/ui-skins/base/hpbar.png" type="Texture" id=4]
[ext_resource path="res://assets/images/icons/face.png" type="Texture" id=5]

[node name="ActorEditor" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Tabs" type="TabContainer" parent="UI"]
margin_left = 879.0
margin_top = 220.0
margin_right = 1220.0
margin_bottom = 591.0
tab_align = 2

[node name="Actor" type="Tabs" parent="UI/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Save" type="Button" parent="UI/Tabs/Actor"]
margin_left = 230.0
margin_top = 7.0
margin_right = 324.0
margin_bottom = 30.0
focus_mode = 0
enabled_focus_mode = 0
text = "Save"

[node name="Load" type="Button" parent="UI/Tabs/Actor"]
margin_left = 230.0
margin_top = 35.0
margin_right = 324.0
margin_bottom = 59.0
focus_mode = 0
enabled_focus_mode = 0
text = "Load"

[node name="ImportImageAtlas" type="Button" parent="UI/Tabs/Actor"]
margin_left = 230.0
margin_top = 112.0
margin_right = 324.0
margin_bottom = 136.0
focus_mode = 0
enabled_focus_mode = 0
text = "Import"

[node name="Name" type="LineEdit" parent="UI/Tabs/Actor"]
margin_left = 59.0
margin_top = 7.0
margin_right = 224.0
margin_bottom = 31.0
placeholder_text = "bf"

[node name="Label" type="Label" parent="UI/Tabs/Actor/Name"]
margin_left = -51.0
margin_right = -9.0
margin_bottom = 24.0
text = "Name:"
valign = 1

[node name="ImageAtlasName" type="LineEdit" parent="UI/Tabs/Actor"]
margin_left = 8.0
margin_top = 112.0
margin_right = 224.0
margin_bottom = 136.0
text = "actors/boyfriend"
placeholder_text = "actors/boyfriend"

[node name="Label" type="Label" parent="UI/Tabs/Actor/ImageAtlasName"]
margin_top = -24.0
margin_right = 72.0
text = "ImageAtlas: "
valign = 1

[node name="AutoplayName" type="LineEdit" parent="UI/Tabs/Actor"]
margin_left = 8.0
margin_top = 168.0
margin_right = 324.0
margin_bottom = 192.0
placeholder_text = "idle"

[node name="Label" type="Label" parent="UI/Tabs/Actor/AutoplayName"]
margin_top = -24.0
margin_right = 72.0
text = "Autoplay animation: "
valign = 1

[node name="IconName" type="LineEdit" parent="UI/Tabs/Actor"]
margin_left = 59.0
margin_top = 35.0
margin_right = 224.0
margin_bottom = 59.0
placeholder_text = "no-face"

[node name="Label" type="Label" parent="UI/Tabs/Actor/IconName"]
margin_left = -51.0
margin_bottom = 24.0
text = "Icon:"
valign = 1

[node name="HpColor" type="ColorPickerButton" parent="UI/Tabs/Actor"]
margin_left = 97.0
margin_top = 294.0
margin_right = 169.0
margin_bottom = 318.0
flat = true
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="Label" type="Label" parent="UI/Tabs/Actor/HpColor"]
margin_left = -87.0
margin_top = 4.0
margin_right = -8.0
margin_bottom = 25.0
text = "Hp Color:"
valign = 1

[node name="SingLen" type="SpinBox" parent="UI/Tabs/Actor"]
margin_left = 103.0
margin_top = 205.0
margin_right = 177.0
margin_bottom = 229.0

[node name="Label" type="Label" parent="UI/Tabs/Actor/SingLen"]
margin_left = -93.0
margin_right = -14.0
margin_bottom = 24.0
text = "Sing length:"
valign = 1

[node name="BumpAt" type="SpinBox" parent="UI/Tabs/Actor"]
margin_left = 103.0
margin_top = 264.0
margin_right = 177.0
margin_bottom = 288.0
min_value = 1.0
value = 1.0
allow_greater = true

[node name="Label" type="Label" parent="UI/Tabs/Actor/BumpAt"]
margin_left = -93.0
margin_right = -6.0
margin_bottom = 24.0
text = "Bump at:"
valign = 1

[node name="Scale" type="SpinBox" parent="UI/Tabs/Actor"]
margin_left = 103.0
margin_top = 234.0
margin_right = 177.0
margin_bottom = 258.0
step = 0.1
value = 1.0
allow_greater = true

[node name="Label" type="Label" parent="UI/Tabs/Actor/Scale"]
margin_left = -93.0
margin_right = -14.0
margin_bottom = 24.0
text = "Scale:"
valign = 1

[node name="Flip" type="CheckBox" parent="UI/Tabs/Actor"]
margin_left = 230.0
margin_top = 205.0
margin_right = 323.0
margin_bottom = 229.0
focus_mode = 0
enabled_focus_mode = 0
text = "Flip?"

[node name="Animations" type="Tabs" parent="UI/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Create" type="Button" parent="UI/Tabs/Animations"]
margin_left = 188.0
margin_top = 311.0
margin_right = 300.0
margin_bottom = 331.0
focus_mode = 0
enabled_focus_mode = 0
text = "Create / Update"

[node name="Name" type="LineEdit" parent="UI/Tabs/Animations"]
margin_left = 8.0
margin_top = 23.0
margin_right = 167.0
margin_bottom = 47.0
placeholder_text = "idle"

[node name="Label" type="Label" parent="UI/Tabs/Animations/Name"]
margin_top = -24.0
margin_right = 42.0
text = "Name:"
valign = 1

[node name="Prefixes" type="OptionButton" parent="UI/Tabs/Animations"]
margin_left = 177.0
margin_top = 23.0
margin_right = 323.0
margin_bottom = 47.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Label" type="Label" parent="UI/Tabs/Animations/Prefixes"]
margin_top = -24.0
margin_right = 42.0
text = "Prefixes:"
valign = 1

[node name="Framerate" type="SpinBox" parent="UI/Tabs/Animations"]
margin_left = 88.0
margin_top = 119.0
margin_right = 179.0
margin_bottom = 143.0
value = 24.0
allow_greater = true

[node name="Label" type="Label" parent="UI/Tabs/Animations/Framerate"]
margin_left = -79.0
margin_bottom = 24.0
text = "Framerate:"
valign = 1

[node name="PlayNext" type="LineEdit" parent="UI/Tabs/Animations"]
margin_left = 8.0
margin_top = 80.0
margin_right = 323.0
margin_bottom = 104.0
placeholder_text = "idle"

[node name="Label" type="Label" parent="UI/Tabs/Animations/PlayNext"]
margin_top = -24.0
margin_right = 149.0
text = "Animation to play next ( In-game ):"
valign = 1

[node name="Loop" type="CheckBox" parent="UI/Tabs/Animations"]
margin_left = 185.0
margin_top = 119.0
margin_right = 250.0
margin_bottom = 143.0
focus_mode = 0
enabled_focus_mode = 0
text = "Loop?"

[node name="ResetAtBeat" type="CheckBox" parent="UI/Tabs/Animations"]
margin_left = 185.0
margin_top = 144.0
margin_right = 250.0
margin_bottom = 168.0
focus_mode = 0
enabled_focus_mode = 0
text = "Reset at beat?"

[node name="Prev" type="Button" parent="UI/Tabs/Animations"]
margin_left = 161.0
margin_top = 311.0
margin_right = 181.0
margin_bottom = 331.0
focus_mode = 0
enabled_focus_mode = 0
text = "<"

[node name="Next" type="Button" parent="UI/Tabs/Animations"]
margin_left = 307.0
margin_top = 311.0
margin_right = 327.0
margin_bottom = 331.0
focus_mode = 0
enabled_focus_mode = 0
text = ">"

[node name="Help" type="Label" parent="UI/Tabs/Animations"]
self_modulate = Color( 1, 1, 1, 0.345098 )
margin_left = 10.0
margin_top = 256.0
margin_right = 327.0
margin_bottom = 321.0
text = "[CTRL+MB RIGHT] to change the camera offset 
[CTRL+MB LEFT] or [Arrows] to change the current animation offset
"
autowrap = true

[node name="OffsetsLabel" type="Label" parent="UI"]
margin_left = 16.0
margin_top = 19.0
margin_right = 292.0
margin_bottom = 367.0
custom_fonts/font = ExtResource( 3 )
text = "Offset: [0,0]"

[node name="BG" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="BG"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.270844, 0.268677, 0.277344, 1 )

[node name="Hpbar" type="Sprite" parent="."]
position = Vector2( 372, 631 )
texture = ExtResource( 4 )

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 666, 632 )
texture = ExtResource( 5 )
hframes = 2

[node name="World" type="Node2D" parent="."]
show_behind_parent = true
position = Vector2( 640, 360 )

[node name="Ghost" type="Sprite" parent="World"]
self_modulate = Color( 0.247059, 0.235294, 0.235294, 0.741176 )
script = ExtResource( 2 )

[node name="Actor" type="Sprite" parent="World"]
script = ExtResource( 2 )

[connection signal="pressed" from="UI/Tabs/Actor/Save" to="." method="save_actor"]
[connection signal="pressed" from="UI/Tabs/Actor/Load" to="." method="load_actor"]
[connection signal="pressed" from="UI/Tabs/Actor/ImportImageAtlas" to="." method="import_imageatlas"]
[connection signal="text_changed" from="UI/Tabs/Actor/IconName" to="." method="on_iconname_changed"]
[connection signal="color_changed" from="UI/Tabs/Actor/HpColor" to="." method="on_hpcolor_changed"]
[connection signal="value_changed" from="UI/Tabs/Actor/Scale" to="." method="on_scale_changed"]
[connection signal="pressed" from="UI/Tabs/Animations/Create" to="." method="create_animation"]
[connection signal="pressed" from="UI/Tabs/Animations/Prev" to="." method="play_actor_previous_animation"]
[connection signal="pressed" from="UI/Tabs/Animations/Next" to="." method="play_actor_next_animation"]
